added arcGIS test

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>FoodTrackr</title>
+    <link rel="stylesheet" href="https://js.arcgis.com/3.18/esri/css/esri.css">
+    <script src="https://js.arcgis.com/3.18/"></script>
+    <script src="js/arcgis.js"></script>
 </head>
 
 <body>
