--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
  
     <link rel="stylesheet" href="https://js.arcgis.com/3.18/esri/css/esri.css"/>
     <script src="https://js.arcgis.com/3.18/"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/arcgis.js"></script>
     
     <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
-    <div id="map"></div>
-    <div id="LocateButton"></div>
+    <div id="info-page">
+        <div id="info">
+            <img src="res/logo.png">
+            <h1>FoodTrackr</h1>
+            <p class="paa">Do you like food?</p>
+            <p class="paa">Do you like free stuff</p>
+            <p class="paa comb">We combined the two</p>
+            <p class="p-last">
+                <a href="#map-page">Scroll down for more</a>
+            </p>
+        </div>
+    </div>
+    <div id="map-page">
+        <div id="map">
+            <div id="LocateButton"></div>
+        </div>
+    </div>
   </body>
 </html>
