--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div id="info-page">
         <div id="info">
-            <img src="res/logo.png">
-            <h1>FoodTrackr</h1>
+            <img id="logo" src="res/logo.png">
+            <h1 id="header">FoodTrackr</h1>
             <p class="paa">Do you like food?</p>
             <p class="paa">Do you like free stuff</p>
             <p class="paa comb">We combined the two</p>
